add error boundary

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,4 +1,6 @@
 {
   "theme": "theme",
+  "unexpected_error_has_occurred": "an unexpected error has occurred",
+  "refresh_page": "refresh the page",
   "page_not_found": "page not found"
 }
