--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,4 +1,6 @@
 {
   "theme": "тема",
+  "unexpected_error_has_occurred": "произошла непредвиденная ошибка",
+  "refresh_page": "обновить страницу",
   "page_not_found": "страница не найдена"
 }
