add modal beta version

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1,8 +1,8 @@
 {
-  "Theme": "тема",
-  "An unexpected error has occurred": "произошла непредвиденная ошибка",
-  "Refresh the page": "обновить страницу",
-  "Page not found": "страница не найдена",
+  "Theme": "Тема",
+  "An unexpected error has occurred": "Произошла непредвиденная ошибка",
+  "Refresh the page": "Обновить страницу",
+  "Page not found": "Страница не найдена",
   "Buy here!": "Купи здесь!",
-  "Loading": "loading"
+  "Loading": "Загрузка"
 }
