--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,5 +4,8 @@
   "Refresh the page": "Refresh the page",
   "Page not found": "Page not found",
   "Buy here!": "Buy here!",
+  "User": "User",
+  "Log in": "Log in",
+  "Enter text": "Enter text",
   "Loading": "Loading"
 }
