--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -4,5 +4,8 @@
   "Refresh the page": "Обновить страницу",
   "Page not found": "Страница не найдена",
   "Buy here!": "Купи здесь!",
+  "User": "Пользователь",
+  "Log in": "Войти",
+  "Enter text": "Введите текст",
   "Loading": "Загрузка"
 }
