add auth by username feature

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,7 +5,9 @@
   "Page not found": "Page not found",
   "Buy here!": "Buy here!",
   "User": "User",
+  "Language": "Language",
   "Log in": "Log in",
   "Enter text": "Enter text",
+  "Wrong login or password": "Wrong login or password",
   "Loading": "Loading"
 }
