--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,7 +5,9 @@
   "Page not found": "Страница не найдена",
   "Buy here!": "Купи здесь!",
   "User": "Пользователь",
+  "Language": "Язык",
   "Log in": "Войти",
   "Enter text": "Введите текст",
+  "Wrong login or password": "Wrong login or password",
   "Loading": "Загрузка"
 }
