--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,6 +8,6 @@
   "Language": "Язык",
   "Log in": "Войти",
   "Enter text": "Введите текст",
-  "Wrong login or password": "Wrong login or password",
+  "Wrong login or password": "Не верный логин или пароль",
   "Loading": "Загрузка"
 }
