--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -9,5 +9,6 @@
   "Log in": "Log in",
   "Enter text": "Enter text",
   "Wrong login or password": "Wrong login or password",
+  "Leave": "Leave",
   "Loading": "Loading"
 }
