--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "Log in": "Войти",
   "Enter text": "Введите текст",
   "Wrong login or password": "Не верный логин или пароль",
+  "Leave": "Выйти",
   "Loading": "Загрузка"
 }
