--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -10,5 +10,9 @@
   "Enter text": "Введите текст",
   "Wrong login or password": "Не верный логин или пароль",
   "Leave": "Выйти",
+  "My profile": "Мой профиль",
+  "About account": "О аккаунте",
+  "Settings": "Настройки",
+  "LogOut": "Выйти",
   "Loading": "Загрузка"
 }
