--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -14,5 +14,32 @@
   "About account": "About account",
   "Settings": "Settings",
   "LogOut": "LogOut",
+  "Account details": "Account details",
+  "Balance": "Balance",
+  "Email": "Email",
+  "There was an error loading the profile": "There was an error loading the profile",
+  "Enter email": "Enter email",
+  "Enter your age": "Enter your age",
+  "Enter your first name": "Enter your first name",
+  "Enter your second name": "Enter your second name",
+  "Enter your city": "Enter your city",
+  "Enter your country": "Enter your country",
+  "Enter your username": "Enter your username",
+  "Email missing": "Email missing",
+  "Age missing": "Age missing",
+  "First name missing": "First name missing",
+  "Second name missing": "Second name missing",
+  "City missing": "City missing",
+  "Username missing": "Username missing",
+  "Country missing": "Country missing",
+  "Age": "Age",
+  "Second name": "Second name",
+  "First name": "First name",
+  "City": "City",
+  "Country": "Country",
+  "Username": "Username",
+  "Change": "Change",
+  "Cancel": "Cancel",
+  "Save": "Save",
   "Loading": "Loading"
 }
