--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -14,5 +14,32 @@
   "About account": "О аккаунте",
   "Settings": "Настройки",
   "LogOut": "Выйти",
+  "Account details": "Детали Аккаунта",
+  "Balance": "Баланс",
+  "Email": "Электронная почта",
+  "There was an error loading the profile": "Возникла ошибка при загрузке профиля",
+  "Enter email": "Введите электонную почту",
+  "Enter your age": "Введите ваш возраст",
+  "Enter your first name": "Введите ваше имя",
+  "Enter your second name": "Введите вашу фамилию",
+  "Enter your city": "Введите ваш город",
+  "Enter your country": "Введите вашу страну",
+  "Enter your username": "Введите ваш логин",
+  "Email missing": "Электронная почта отсутствует",
+  "Age missing": "Возраст отсутствует",
+  "First name missing": "Имя отсутствует",
+  "Second name missing": "Фамилия отсутствует",
+  "City missing": "Город отсутствует",
+  "Username missing": "Никнейм отсутствует",
+  "Country missing": "Страна отсутствует",
+  "Age": "Возраст",
+  "Second name": "фамилия",
+  "First name": "Имя",
+  "City": "Город",
+  "Country": "Страна",
+  "Username": "Логин",
+  "Change": "Изменить",
+  "Cancel": "Отмена",
+  "Save": "Сохранить",
   "Loading": "Загрузка"
 }
